avoid conflicting licenses; allow for changes between releases

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ copyright_year      = 2013
 license             = Perl_5
 
 [Git::GatherDir]
+exclude_filename = LICENSE
 
 [@Filter]
 -bundle = @Basic
@@ -93,6 +94,7 @@ release_branch = stable
 
 [Git::Check]
 allow_dirty = README.md
+allow_dirty = LICENSE
 
 [NextRelease]
 :version = 4.300018
