--- a/dist.ini
+++ b/dist.ini
@@ -60,6 +60,8 @@ location = root
 ;[Test::Pod::LinkCheck]     many outstanding bugs
 [Test::Pod::No404s]
 [Test::PodSpelling]
+stopwords = Versioning
+stopwords = WebDAV
 
 [Test::Compile]
 fail_on_warning = 1
