--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,10 @@ license             = Perl_5
 
 [@Author::ETHER]
 
+[MetaResources]
+x_IRC = irc://irc.perl.org/#moose
+x_MailingList = http://lists.perl.org/list/moose.html
+
 [Prereqs / DevelopRequires]
 Test::CleanNamespaces = 0
 
