check for warnings only for the author

--- a/dist.ini
+++ b/dist.ini
@@ -12,5 +12,6 @@ x_MailingList = http://lists.perl.org/list/moose.html
 
 [Prereqs / DevelopRequires]
 Test::CleanNamespaces = 0
+Test::Warnings = 0
 
 [Test::Kwalitee]
