--- a/dist.ini
+++ b/dist.ini
@@ -14,4 +14,6 @@ x_MailingList = http://lists.perl.org/list/moose.html
 Test::CleanNamespaces = 0
 Test::Warnings = 0
 
+; authordep Pod::Weaver = 4
+
 [Test::Kwalitee]
