remove tests now provided by pluginbundle

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,7 @@ copyright_year      = 2013
 license             = Perl_5
 
 [@Author::ETHER]
+:version = 0.043
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
@@ -15,5 +16,3 @@ Test::CleanNamespaces = 0
 Test::Warnings = 0
 
 ; authordep Pod::Weaver = 4
-
-[Test::Kwalitee]
