run moose-outdated in tests

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.043
+Test::ReportPrereqs.include = Dist::CheckConflicts
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
@@ -16,3 +17,6 @@ Test::CleanNamespaces = 0
 Test::Warnings = 0
 
 ; authordep Pod::Weaver = 4
+
+[Test::CheckBreaks]
+conflicts_module = Moose::Conflicts
