--- a/dist.ini
+++ b/dist.ini
@@ -13,10 +13,11 @@ x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
 
 [Prereqs / DevelopRequires]
-Test::CleanNamespaces = 0
 Test::Warnings = 0
 
 ; authordep Pod::Weaver = 4
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
+
+[Test::CleanNamespaces]
