--- a/dist.ini
+++ b/dist.ini
@@ -8,16 +8,21 @@ license             = Perl_5
 :version = 0.086
 Test::ReportPrereqs.include = Dist::CheckConflicts
 
+[Substitute]
+:version = 0.006
+file = xt/author/clean-namespaces.t
+code = s/^(# this test was .*)$/$1\n# and altered by the local dist.ini/;
+code = s/^(use Test::CleanNamespaces.*)$/$1\nuse Test::Requires { 'MooseX::Types' => '0.42' };/;
+
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
+Test::Requires = 0
 
 ; authordep Pod::Weaver = 4
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
-
-[Test::CleanNamespaces]
