affirm that we work as far back as Moose itself does

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ license             = Perl_5
 [@Author::ETHER]
 :version = 0.086
 Test::ReportPrereqs.include = Dist::CheckConflicts
+Test::MinimumVersion.max_target_perl = 5.008003
 
 [Substitute]
 :version = 0.006
