--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ Test::MinimumVersion.max_target_perl = 5.008003
 :version = 0.006
 file = xt/author/clean-namespaces.t
 code = s/^(# this test was .*)$/$1\n# and altered by the local dist.ini/;
-code = s/^(use Test::CleanNamespaces.*)$/$1\nuse Test::Requires { 'MooseX::Types' => '0.42' };/;
+code = s/^(use Test::CleanNamespaces.*)$/$1\nuse Test::Needs { 'MooseX::Types' => '0.42' };/;
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
@@ -21,7 +21,7 @@ x_MailingList = http://lists.perl.org/list/moose.html
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
-Test::Requires = 0
+Test::Needs = 0
 
 [Test::CheckBreaks]
 :version = 0.017
