--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,8 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.103
-Test::ReportPrereqs.include = Dist::CheckConflicts
+Test::ReportPrereqs.include[0] = Dist::CheckConflicts
+Test::ReportPrereqs.include[1] = namespace::clean
 Test::MinimumVersion.max_target_perl = 5.008003
 
 [Substitute]
